--- a/app/src/main/res/menu/activity_menu_drawer.xml
+++ b/app/src/main/res/menu/activity_menu_drawer.xml
@@ -5,21 +5,26 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="@string/menu_home" />
+            android:id="@+id/crearM"
+            android:icon="@drawable/nuevo"
+            android:title="Altas" />
         <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/menu_gallery" />
+            android:id="@+id/editarM"
+            android:icon="@drawable/editar"
+            android:title="Modificaciones" />
         <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_slideshow" />
+            android:id="@+id/eliminarM"
+            android:icon="@drawable/eliminar"
+            android:title="Bajas" />
         <item
-            android:id="@+id/nav_tools"
+            android:id="@+id/listarM"
+            android:icon="@drawable/listar"
+            android:title="Consultas" />
+        <item
+            android:id="@+id/creditos"
             android:icon="@drawable/ic_menu_manage"
-            android:title="@string/menu_tools" />
+            android:title="Creditos"
+            />
     </group>
 
     <item android:title="Communicate">
