--- a/app/src/main/res/layout/fragment_modificar.xml
+++ b/app/src/main/res/layout/fragment_modificar.xml
@@ -30,6 +30,7 @@
                 android:id="@+id/tv_mod_id"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:enabled="false"
                 android:hint="@string/igecem" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -209,14 +210,14 @@
             android:id="@+id/cb_mod_deslave"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="44dp"
-            android:layout_marginLeft="44dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             android:text="@string/deslave"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.062"
+            app:layout_constraintHorizontal_bias="0.218"
             app:layout_constraintStart_toEndOf="@+id/cb_mod_inundacion"
             app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
@@ -235,14 +236,14 @@
             android:id="@+id/cb_mod_incendio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginLeft="32dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="24dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             android:text="@string/incendio_forestal"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="0.301"
             app:layout_constraintStart_toEndOf="@+id/cb_mod_sismica"
             app:layout_constraintTop_toBottomOf="@+id/cb_mod_inundacion" />
 
@@ -266,15 +267,15 @@
             android:layout_marginTop="20dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
-            android:text="@string/derrumbes"
             app:layout_constraintEnd_toEndOf="parent"
+            android:text="@string/derrumbes"
             app:layout_constraintHorizontal_bias="0.109"
             app:layout_constraintStart_toEndOf="@+id/cb_mod_volcanica"
             app:layout_constraintTop_toBottomOf="@+id/cb_mod_sismica" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/textInputLayout5"
-            android:layout_width="201dp"
+            android:layout_width="139dp"
             android:layout_height="60dp"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
@@ -289,6 +290,7 @@
                 android:id="@+id/tv_mod_buscar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+
                 android:hint="@string/buscar" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -298,11 +300,12 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="24dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             android:text="@string/buscar"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.161"
             app:layout_constraintStart_toEndOf="@+id/textInputLayout5"
             app:layout_constraintTop_toTopOf="parent" />
 
