--- a/app/src/main/res/layout/fragment_insertar_municipio.xml
+++ b/app/src/main/res/layout/fragment_insertar_municipio.xml
@@ -75,12 +75,12 @@
             android:id="@+id/btn_insertar_guardar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="8dp"
             android:text="@string/insertar"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.224"
+            app:layout_constraintHorizontal_bias="0.18"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btn_insert_mapa" />
+            app:layout_constraintTop_toBottomOf="@+id/cb_insert_derrumbe" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/textInputLayout3"
@@ -170,14 +170,14 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             android:text="@string/cancelar"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.583"
+            app:layout_constraintHorizontal_bias="0.477"
             app:layout_constraintStart_toEndOf="@+id/btn_insertar_guardar"
-            app:layout_constraintTop_toBottomOf="@+id/btn_insert_mapa" />
+            app:layout_constraintTop_toBottomOf="@+id/cb_insert_derrumbe" />
 
         <Button
             android:id="@+id/btn_insert_mapa"
@@ -190,9 +190,9 @@
             android:layout_marginRight="8dp"
             android:text="@string/mapa"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.53"
+            app:layout_constraintHorizontal_bias="0.781"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cb_insert_volcanica" />
+            app:layout_constraintTop_toBottomOf="@+id/sp_insert_clima" />
 
         <CheckBox
             android:id="@+id/cb_insert_inundacion"
@@ -207,18 +207,13 @@
 
         <CheckBox
             android:id="@+id/cb_insert_deslave"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="44dp"
-            android:layout_marginLeft="44dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
+            android:layout_width="94dp"
+            android:layout_height="34dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
             android:text="@string/deslave"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.062"
-            app:layout_constraintStart_toEndOf="@+id/cb_insert_inundacion"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cb_insert_volcanica" />
 
         <CheckBox
             android:id="@+id/cb_insert_sismica"
@@ -235,24 +230,24 @@
             android:id="@+id/cb_insert_incendio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginLeft="32dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             android:text="@string/incendio_forestal"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/cb_insert_sismica"
-            app:layout_constraintTop_toBottomOf="@+id/cb_insert_inundacion" />
+            app:layout_constraintHorizontal_bias="0.031"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cb_insert_deslave" />
 
         <CheckBox
             android:id="@+id/cb_insert_volcanica"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="4dp"
             android:text="@string/zona_v_lcanica"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cb_insert_sismica" />
@@ -261,16 +256,12 @@
             android:id="@+id/cb_insert_derrumbe"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
             android:layout_marginTop="20dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
             android:text="@string/derrumbes"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.109"
-            app:layout_constraintStart_toEndOf="@+id/cb_insert_volcanica"
-            app:layout_constraintTop_toBottomOf="@+id/cb_insert_sismica" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cb_insert_incendio" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
