--- a/app/src/main/res/layout/fragment_modificar.xml
+++ b/app/src/main/res/layout/fragment_modificar.xml
@@ -189,7 +189,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
-            android:text="@string/mapa"
+            android:text="Modificar mapa"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.53"
             app:layout_constraintStart_toStartOf="parent"
