--- a/app/src/main/res/layout/fila_municipio.xml
+++ b/app/src/main/res/layout/fila_municipio.xml
@@ -25,7 +25,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tv_Datos"
+        android:id="@+id/tv_consultar_municipios"
         android:layout_width="389dp"
         android:layout_height="65dp"
         android:layout_marginStart="8dp"
