--- a/app/src/main/res/layout/fragment_consultar_zonas.xml
+++ b/app/src/main/res/layout/fragment_consultar_zonas.xml
@@ -5,10 +5,19 @@
     android:layout_height="match_parent"
     tools:context=".ConsultarZonas">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:orientation="vertical">
 
+        <Spinner
+            android:id="@+id/spn_consultar_zonas"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <ListView
+            android:id="@+id/lv_consultar_zonas"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </LinearLayout>
 </FrameLayout>
