--- a/app/src/main/res/layout/fragment_insertar_municipio.xml
+++ b/app/src/main/res/layout/fragment_insertar_municipio.xml
@@ -78,7 +78,7 @@
             android:layout_marginTop="8dp"
             android:text="@string/insertar"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.224"
+            app:layout_constraintHorizontal_bias="0.121"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cb_insert_volcanica" />
 
@@ -178,6 +178,18 @@
             app:layout_constraintHorizontal_bias="0.266"
             app:layout_constraintStart_toEndOf="@+id/btn_insertar_guardar"
             app:layout_constraintTop_toBottomOf="@+id/cb_insert_volcanica" />
+
+        <Button
+            android:id="@+id/btnMasivo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="57dp"
+            android:layout_marginLeft="57dp"
+            android:text="Masivo"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="@+id/btn_insert_cancelar"
+            tools:layout_editor_absoluteY="497dp" />
 
         <CheckBox
             android:id="@+id/cb_insert_inundacion"
